--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -19,3 +19,19 @@
     สมัครเลย !!
   </a>
 </div>
+<div class="flex grow gap-3 p-3">
+  <input
+    [(ngModel)]="value"
+    class="p-inputtext-sm w-full"
+    pInputText
+    placeholder="Small"
+    type="text"
+  />
+</div>
+
+<button
+  class="p-button-success"
+  label="Submit"
+  pButton
+  pRipple
+></button>
