--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,49 +1,46 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@use "@angular/material" as mat;
-// Plus imports for other components in your app.
+// @use "@angular/material" as mat;
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat.core();
+// @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$insurance-primary: mat.define-palette(mat.$indigo-palette);
-$insurance-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$insurance-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$insurance-theme: mat.define-light-theme(
-  (
-    color: (
-      primary: $insurance-primary,
-      accent: $insurance-accent,
-      warn: $insurance-warn,
-    ),
-  )
-);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($insurance-theme);
+// $insurance-primary: mat.define-palette(mat.$indigo-palette);
+// $insurance-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+// $insurance-warn: mat.define-palette(mat.$red-palette);
+// $insurance-theme: mat.define-light-theme(
+//   (
+//     color: (
+//       primary: $insurance-primary,
+//       accent: $insurance-accent,
+//       warn: $insurance-warn,
+//     ),
+//   )
+// );
+// @include mat.all-component-themes($insurance-theme);
 
 // tailwind
-@layer tw-base, primeng, tw-components, tw-utilities;
+// @layer tw-base, primeng, tw-components, tw-utilities;
 
-@import "tailwindcss/base.css" layer(tw-base);
-@import "tailwindcss/components.css" layer(tw-components);
-@import "tailwindcss/utilities.css" layer(tw-utilities);
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 
-// primeng
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
+// @import "tailwindcss/base.css" layer(tw-base);
+// @import "tailwindcss/components.css" layer(tw-components);
+// @import "tailwindcss/utilities.css" layer(tw-utilities);
+
+// // primeng
+// @import "primeng/resources/themes/lara-light-blue/theme.css";
+// @import "primeng/resources/primeng.css";
+
+@layer tailwind-base, primeng, tailwind-utilities;
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
 
 html {
   @apply bg-neutral-100;
@@ -57,3 +54,8 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+// .mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field.mat-mdc-form-field
+//   .mdc-notched-outline__notch {
+//   border-right-style: hidden;
+// }
