--- a/src/app/modules/product/pages/product/product.component.html
+++ b/src/app/modules/product/pages/product/product.component.html
@@ -1,1 +1,23 @@
-<p>product works!</p>
+<app-navbar
+  textColorClass="text-white"
+  title="product.healthCare"
+  titleAlign="center"
+>
+  <ng-template #actionButton>
+    <button (click)="changeLang('th')">TH</button>
+    &nbsp;
+    <button (click)="changeLang('en')">EN</button>
+  </ng-template>
+</app-navbar>
+
+@if(showPdpa) {
+<app-pdpa-dialog></app-pdpa-dialog>
+}
+
+<div class="max-xl mx-auto pt-[50px] px-3">
+  <p-button
+    (click)="checkPersonalId()"
+    label="{{'buy' | translate}}"
+    size="small"
+  ></p-button>
+</div>
